--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
     <header>
       <section>
-        <a> Техномарт </a>
+        <a href="index.html"> Техномарт </a>
         <form action="#" method="POST">
           <input type="search" placeholder="Поиск:" />
         </form>
@@ -36,10 +36,10 @@
           <ul>
             <li><a href="blank.html">Главная</a></li>
             <li><a href="blank.html">Компания</a></li>
-            <li><a href="price.html">Каталог</a></li>
-            <li><a href="catalog.html">Новости</a></li>
+            <li><a href="blank.html">Каталог</a></li>
+            <li><a href="blank.html">Новости</a></li>
             <li><a href="blank.html">Спецпредложения</a></li>
-            <li><a href="catalog.html">Доставка</a></li>
+            <li><a href="blank.html">Доставка</a></li>
             <li><a href="blank.html">Контакты</a></li>
           </ul>
         </nav>
@@ -101,31 +101,51 @@
 
         <ul>
           <li>
-            <img src="https://via.placeholder.com/184x164" />
-            <h3>Перфоратор BOSCH BFG 9000</h3>
-            <h4>32500 Р.</h4>
-            <button>25500 Р.</button>
+            <a href="product.html">
+              <img
+                src="https://via.placeholder.com/184x164"
+                alt="Перфоратор BOSCH BFG 9000"
+              />
+              <h3>Перфоратор BOSCH BFG 9000</h3>
+              <h4>32500 Р.</h4>
+            </a>
+            <button type="button">25500 Р.</button>
           </li>
 
           <li>
-            <img src="https://via.placeholder.com/184x164" />
-            <h3>Перфоратор BOSCH BFG 3000</h3>
-            <h4>22500 Р.</h4>
-            <button>15500 Р.</button>
+            <a href="product.html">
+              <img
+                src="https://via.placeholder.com/184x164"
+                alt="Перфоратор BOSCH BFG 3000"
+              />
+              <h3>Перфоратор BOSCH BFG 3000</h3>
+              <h4>22500 Р.</h4>
+            </a>
+            <button type="button">15500 Р.</button>
           </li>
 
           <li>
-            <img src="https://via.placeholder.com/184x164" />
-            <h3>Перфоратор BOSCH BFG 6000</h3>
-            <h4>30500 Р.</h4>
-            <button>25500 Р.</button>
+            <a href="product.html">
+              <img
+                src="https://via.placeholder.com/184x164"
+                alt="Перфоратор BOSCH BFG 6000"
+              />
+              <h3>Перфоратор BOSCH BFG 6000</h3>
+              <h4>30500 Р.</h4>
+            </a>
+            <button type="button">25500 Р.</button>
           </li>
 
           <li>
-            <img src="https://via.placeholder.com/184x164" />
-            <h3>Перфоратор BOSCH BFG 2000</h3>
-            <h4>32500 Р.</h4>
-            <button>12500 Р.</button>
+            <a href="product.html">
+              <img
+                src="https://via.placeholder.com/184x164"
+                alt="Перфоратор BOSCH BFG 2000"
+              />
+              <h3>Перфоратор BOSCH BFG 2000</h3>
+              <h4>32500 Р.</h4>
+            </a>
+            <button type="button">12500 Р.</button>
           </li>
         </ul>
       </section>
@@ -136,35 +156,59 @@
 
         <ul>
           <li>
-            <img src="https://via.placeholder.com/220x145" />
+            <img
+              src="https://via.placeholder.com/220x145"
+              alt="Производитель"
+            />
           </li>
 
           <li>
-            <img src="https://via.placeholder.com/220x145" />
+            <img
+              src="https://via.placeholder.com/220x145"
+              alt="Производитель"
+            />
           </li>
 
           <li>
-            <img src="https://via.placeholder.com/220x145" />
+            <img
+              src="https://via.placeholder.com/220x145"
+              alt="Производитель"
+            />
           </li>
 
           <li>
-            <img src="https://via.placeholder.com/220x145" />
+            <img
+              src="https://via.placeholder.com/220x145"
+              alt="Производитель"
+            />
           </li>
 
           <li>
-            <img src="https://via.placeholder.com/220x145" />
+            <img
+              src="https://via.placeholder.com/220x145"
+              alt="Производитель"
+            />
           </li>
 
           <li>
-            <img src="https://via.placeholder.com/220x145" />
+            <img
+              src="https://via.placeholder.com/220x145"
+              alt="Производитель"
+            />
           </li>
 
           <li>
-            <img src="https://via.placeholder.com/220x145" />
+            <img
+              src="https://via.placeholder.com/220x145"
+              alt="Производитель"
+            />
           </li>
 
           <li>
-            <img src="https://via.placeholder.com/220x145" />
+            <img
+              src="https://via.placeholder.com/220x145"
+              alt="Производитель"
+            />
           </li>
         </ul>
       </section>
@@ -216,13 +260,13 @@
 
     <footer>
       <section>
-        <a>ТЕХНОМАРТ</a>
+        <a href="index.html">ТЕХНОМАРТ</a>
         <ul>
-          <li>Компания</li>
-          <li>Новости</li>
-          <li>Каталог</li>
-          <li>Доставка</li>
-          <li>Каталог</li>
+          <li><a href="blank.html">Компания</a></li>
+          <li><a href="blank.html">Новости</a></li>
+          <li><a href="blank.html">Каталог</a></li>
+          <li><a href="blank.html">Доставка</a></li>
+          <li><a href="blank.html">Каталог</a></li>
         </ul>
       </section>
 
@@ -232,10 +276,10 @@
           +7 (812) 555-05-55
         </p>
         <ul>
-          <li>Материалы</li>
-          <li>Техника</li>
-          <li>Инструмент</li>
-          <li>Спецпредложения</li>
+          <li><a href="blank.html">Материалы</a></li>
+          <li><a href="blank.html">Техника</a></li>
+          <li><a href="blank.html">Инструмент</a></li>
+          <li><a href="blank.html">Спецпредложения</a></li>
         </ul>
       </section>
 
@@ -245,9 +289,9 @@
           Все права защищены
         </p>
         <ul>
-          <li><a>вк</a></li>
-          <li><a>фейсбук</a></li>
-          <li><a>инстаграм</a></li>
+          <li><a href="https://vk.com">вк</a></li>
+          <li><a href="https://facebook.com">фейсбук</a></li>
+          <li><a href="https://instagram.com">инстаграм</a></li>
         </ul>
 
         <p>
