--- a/index.html
+++ b/index.html
@@ -3,208 +3,229 @@
   <head>
     <meta charset="utf-8" />
     <title>HTML Academy: Техномарт</title>
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Cuprum:ital,wght@0,400;0,700;1,400&family=PT+Sans:wght@400;700&display=swap"
+    />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Cuprum:ital,wght@0,400;0,700;1,400&display=swap"
+    />
+    <link rel="stylesheet" href="css/normalize.css" />
+    <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <header>
-      <section>
-        <a href="index.html"> Техномарт </a>
+    <header class="header">
+      <section class="header-orders">
+        <a href="index.html" class="header-logo">Техномарт</a>
         <form action="#" method="POST">
           <input type="search" placeholder="Поиск:" />
         </form>
-        <ul>
-          <li>Закладки: 0</li>
-          <li>Корзина: 0</li>
+        <ul class="header-products">
+          <li class="header-products_marker">Закладки: 0</li>
+          <li class="header-products_basket">Корзина: 0</li>
+          <li>
+            <a class="button-checkout" href="blank.html">Оформить заказ</a>
+          </li>
         </ul>
-
-        <a href="blank.html">Оформить заказ</a>
       </section>
 
-      <section>
-        <i
+      <section class="header-info">
+        <i class="header-info-title"
           >Интернет-магазин строительных материалов и инструментов для
           ремонта</i
         >
-        <p>+7 (812) 555-05-55</p>
-        <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
-
-        <a href="blank.html">Войти</a>
-        <a href="blank.html">Регистрация</a>
+        <p class="header-info-phone">+7 (812) 555-05-55</p>
+        <p class="header-info-address">
+          г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8
+        </p>
+        <ul class="header-buttons">
+          <li class="header-button">
+            <a class="button-sign-in" href="blank.html">Войти</a>
+          </li>
+          <li class="header-button">
+            <a class="button-registration" href="blank.html">Регистрация</a>
+          </li>
+        </ul>
       </section>
 
-      <section>
+      <section class="header-nav">
         <nav>
-          <ul>
-            <li><a href="blank.html">Главная</a></li>
-            <li><a href="blank.html">Компания</a></li>
-            <li><a href="blank.html">Каталог</a></li>
-            <li><a href="blank.html">Новости</a></li>
-            <li><a href="blank.html">Спецпредложения</a></li>
-            <li><a href="blank.html">Доставка</a></li>
-            <li><a href="blank.html">Контакты</a></li>
+          <ul class="header-nav-list">
+            <li class="header-nav-item"><a href="blank.html">Главная</a></li>
+            <li class="header-nav-item"><a href="blank.html">Компания</a></li>
+            <li class="header-nav-item"><a href="blank.html">Каталог</a></li>
+            <li class="header-nav-item"><a href="blank.html">Новости</a></li>
+            <li class="header-nav-item">
+              <a href="blank.html">Спецпредложения</a>
+            </li>
+            <li class="header-nav-item"><a href="blank.html">Доставка</a></li>
+            <li class="header-nav-item"><a href="blank.html">Контакты</a></li>
           </ul>
         </nav>
       </section>
     </header>
 
-    <main>
-      <section>
-        <h2>Товары и информация</h2>
-        <ui>
-          <li>
+    <main class="main-container">
+      <section class="categories">
+        <ui class="categories-items">
+          <li class="categories-item">
             <div>
-              <h3>Материалы</h3>
-              <a href="#">На любой вкус</a>
+              <h3 class="categories-item-title">Материалы</h3>
+              <a class="categories-item-link" href="#">На любой вкус</a>
             </div>
           </li>
 
-          <li>
+          <li class="categories-item">
             <div>
-              <h3>Инструмент</h3>
-              <a href="#">На все случаи</a>
+              <h3 class="categories-item-title">Инструмент</h3>
+              <a class="categories-item-link" href="#">На все случаи</a>
             </div>
           </li>
 
-          <li>
+          <li class="categories-item">
             <div>
-              <h3>Техника</h3>
-              <a href="#">Для стройки</a>
+              <h3 class="categories-item-title">Техника</h3>
+              <a class="categories-item-link" href="#">Для стройки</a>
             </div>
           </li>
 
-          <li>
+          <li class="categories-item">
             <div>
-              <h3>Скидки до 50%</h3>
-              <a href="#">На 350 товаров</a>
+              <h3 class="categories-item-title">Скидки до 50%</h3>
+              <a class="categories-item-link" href="#">На 350 товаров</a>
             </div>
           </li>
 
-          <li>
+          <li class="categories-item">
             <div>
-              <h3>Доставка</h3>
-              <a href="#">Бесплатно</a>
+              <h3 class="categories-item-title">Доставка</h3>
+              <a class="categories-item-link" href="#">Бесплатно</a>
             </div>
           </li>
 
-          <li>
+          <li class="categories-item">
             <div>
-              <h3>Перфораторы</h3>
-              <h4>Настоящие мужские игрушки</h4>
-              <a href="#">Открыть каталог</a>
+              <h3 class="categories-slider-title">Перфораторы</h3>
+              <h4 class="categories-item-subtitle">
+                Настоящие мужские игрушки
+              </h4>
+              <a class="categories-item-link" href="#">Открыть каталог</a>
             </div>
           </li>
         </ui>
       </section>
 
-      <section>
-        <h2>Популярные товары</h2>
-        <a href="#">Все популярные товары</a>
+      <section class="products">
+        <h2 class="products-title">Популярные товары</h2>
+        <a class="basic-btn products-link" href="#">Все популярные товары</a>
 
-        <ul>
-          <li>
-            <a href="product.html">
+        <ul class="products-items">
+          <li class="products-item">
+            <a class="products-item-link" href="product.html">
               <img
                 src="https://via.placeholder.com/184x164"
                 alt="Перфоратор BOSCH BFG 9000"
               />
-              <h3>Перфоратор BOSCH BFG 9000</h3>
-              <h4>32500 Р.</h4>
+              <h3 class="products-item-title">Перфоратор BOSCH BFG 9000</h3>
+              <h4 class="products-item-price">32500 Р.</h4>
             </a>
-            <button type="button">25500 Р.</button>
+            <button class="products-item-btn" type="button">25500 Р.</button>
           </li>
 
-          <li>
-            <a href="product.html">
+          <li class="products-item">
+            <a class="products-item-link" href="product.html">
               <img
                 src="https://via.placeholder.com/184x164"
                 alt="Перфоратор BOSCH BFG 3000"
               />
-              <h3>Перфоратор BOSCH BFG 3000</h3>
-              <h4>22500 Р.</h4>
+              <h3 class="products-item-title">Перфоратор BOSCH BFG 3000</h3>
+              <h4 class="products-item-price">22500 Р.</h4>
             </a>
-            <button type="button">15500 Р.</button>
+            <button class="products-item-btn" type="button">15500 Р.</button>
           </li>
 
-          <li>
-            <a href="product.html">
+          <li class="products-item">
+            <a class="products-item-link" href="product.html">
               <img
                 src="https://via.placeholder.com/184x164"
                 alt="Перфоратор BOSCH BFG 6000"
               />
-              <h3>Перфоратор BOSCH BFG 6000</h3>
-              <h4>30500 Р.</h4>
+              <h3 class="products-item-title">Перфоратор BOSCH BFG 6000</h3>
+              <h4 class="products-item-price">30500 Р.</h4>
             </a>
-            <button type="button">25500 Р.</button>
+            <button class="products-item-btn" type="button">25500 Р.</button>
           </li>
 
-          <li>
-            <a href="product.html">
+          <li class="products-item">
+            <a class="products-item-link" href="product.html">
               <img
                 src="https://via.placeholder.com/184x164"
                 alt="Перфоратор BOSCH BFG 2000"
               />
-              <h3>Перфоратор BOSCH BFG 2000</h3>
-              <h4>32500 Р.</h4>
+              <h3 class="products-item-title">Перфоратор BOSCH BFG 2000</h3>
+              <h4 class="products-item-price">32500 Р.</h4>
             </a>
-            <button type="button">12500 Р.</button>
+            <button class="products-item-btn" type="button">12500 Р.</button>
           </li>
         </ul>
       </section>
 
-      <section>
-        <h2>Популярные Производители</h2>
-        <a href="#">все производители</a>
+      <section class="producers">
+        <h2 class="producers-title">Популярные Производители</h2>
+        <a class="basic-btn producers-link" href="#">все производители</a>
 
-        <ul>
-          <li>
+        <ul class="producers-items">
+          <li class="producers-item">
             <img
               src="https://via.placeholder.com/220x145"
               alt="Производитель"
             />
           </li>
 
-          <li>
+          <li class="producers-item">
             <img
               src="https://via.placeholder.com/220x145"
               alt="Производитель"
             />
           </li>
 
-          <li>
+          <li class="producers-item">
             <img
               src="https://via.placeholder.com/220x145"
               alt="Производитель"
             />
           </li>
 
-          <li>
+          <li class="producers-item">
             <img
               src="https://via.placeholder.com/220x145"
               alt="Производитель"
             />
           </li>
 
-          <li>
+          <li class="producers-item">
             <img
               src="https://via.placeholder.com/220x145"
               alt="Производитель"
             />
           </li>
 
-          <li>
+          <li class="producers-item">
             <img
               src="https://via.placeholder.com/220x145"
               alt="Производитель"
             />
           </li>
 
-          <li>
+          <li class="producers-item">
             <img
               src="https://via.placeholder.com/220x145"
               alt="Производитель"
             />
           </li>
 
-          <li>
+          <li class="producers-item">
             <img
               src="https://via.placeholder.com/220x145"
               alt="Производитель"
@@ -213,28 +234,28 @@
         </ul>
       </section>
 
-      <section>
-        <h2>Сервисы</h2>
-        <p>
+      <section class="services">
+        <h2 class="services-title">Сервисы</h2>
+        <p class="services-subtitle">
           Хороший интернет-магазин отличается от плохого не только ценами! Мы
           стараемся изо всех сил, чтобы сделать ваши покупки приятными.
         </p>
-        <select name="select" size="3" multiple>
+        <select class="services-select" name="select" size="3" multiple>
           <option selected value="s1">Доставка</option>
           <option value="s2">Гарантия</option>
           <option value="s3">Кредит</option>
         </select>
 
-        <h2>Доставка</h2>
-        <p>
+        <h2 class="services-title">Доставка</h2>
+        <p class="services-subtitle">
           Мы с удовольствием доставим ваш товар прямо к вашему подъезду
           совершенно бесплатно! Ведь мы неплохо заработаем, поднимая его на ваш
           этаж!
         </p>
       </section>
-      <section>
-        <h2>КОМПАНИЯ «Техномарт»</h2>
-        <p>
+      <section class="about">
+        <h2 class="about-title">КОМПАНИЯ «ТЕХНОМАРТ»</h2>
+        <p class="about-subtitle">
           Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для
           ремонта и строительства не оставит равнодушными любителей сэкономить
           на гастарбайтерах.<br />
@@ -243,65 +264,77 @@
           Мы можем доставить ваш товар в самые отдаленные точки России!
           Техномарт работает со многими транспортными компаниями:
         </p>
-        <ul>
-          <li>Деловые линии</li>
-          <li>Автотрейдинг</li>
-          <li>ЖелДорЭкспедиция</li>
+        <ul class="about-partners">
+          <li class="about-partner">Деловые линии</li>
+          <li class="about-partner">Автотрейдинг</li>
+          <li class="about-partner">ЖелДорЭкспедиция</li>
         </ul>
-        <a href="#">Подробнее о компании</a>
+        <a class="basic-btn about-link" href="#">Подробнее о компании</a>
       </section>
-      <section>
-        <h2>КОНТАКТЫ</h2>
-        <p>Вы можете забрать товар сами, заехав в наш офис:</p>
+      <section class="contacts">
+        <h2 class="contacts-title">КОНТАКТЫ</h2>
+        <p class="contacts-subtitle">
+          Вы можете забрать товар сами, заехав в наш офис:
+        </p>
         <img src="https://via.placeholder.com/300x158" />
-        <a href="#">Заблудились? Напишите нам!</a>
+        <a class="basic-btn contacts-button" href="#">Заблудились? Напишите нам!</a>
       </section>
     </main>
 
-    <footer>
-      <section>
-        <a href="index.html">ТЕХНОМАРТ</a>
-        <ul>
-          <li><a href="blank.html">Компания</a></li>
-          <li><a href="blank.html">Новости</a></li>
-          <li><a href="blank.html">Каталог</a></li>
-          <li><a href="blank.html">Доставка</a></li>
-          <li><a href="blank.html">Каталог</a></li>
+    <footer class="footer">
+      <section class="footer-nav">
+        <a class="footer-logo" href="index.html">ТЕХНОМАРТ</a>
+        <ul class="footer-nav-items">
+          <li class="footer-nav-item"><a href="blank.html">Компания</a></li>
+          <li class="footer-nav-item"><a href="blank.html">Новости</a></li>
+          <li class="footer-nav-item"><a href="blank.html">Каталог</a></li>
+          <li class="footer-nav-item"><a href="blank.html">Доставка</a></li>
+          <li class="footer-nav-item"><a href="blank.html">Каталог</a></li>
         </ul>
       </section>
 
-      <section>
-        <p>
+      <section class="footer-products">
+        <p class="footer-address">
           г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8<br />
           +7 (812) 555-05-55
         </p>
-        <ul>
-          <li><a href="blank.html">Материалы</a></li>
-          <li><a href="blank.html">Техника</a></li>
-          <li><a href="blank.html">Инструмент</a></li>
-          <li><a href="blank.html">Спецпредложения</a></li>
+        <ul class="footer-products-items">
+          <li class="footer-products-item">
+            <a href="blank.html">Материалы</a>
+          </li>
+          <li class="footer-products-item"><a href="blank.html">Техника</a></li>
+          <li class="footer-products-item">
+            <a href="blank.html">Инструмент</a>
+          </li>
+          <li class="footer-products-item">
+            <a href="blank.html">Спецпредложения</a>
+          </li>
         </ul>
       </section>
 
-      <section>
-        <p>
+      <section class="footer-contacts">
+        <p class="footer-law">
           © 2010–2019 Компания «Техномарт»<br />
           Все права защищены
         </p>
-        <ul>
-          <li><a href="https://vk.com">вк</a></li>
-          <li><a href="https://facebook.com">фейсбук</a></li>
-          <li><a href="https://instagram.com">инстаграм</a></li>
+        <ul class="footer-accounts">
+          <li class="footer-account"><a href="https://vk.com">вк</a></li>
+          <li class="footer-account">
+            <a href="https://facebook.com">фейсбук</a>
+          </li>
+          <li class="footer-account">
+            <a href="https://instagram.com">инстаграм</a>
+          </li>
         </ul>
 
-        <p>
+        <p class="footer-text">
           Обратная связь:<br />
-          <span>mail@htmlacademy.ru</span>
+          <span class="footer-span">mail@htmlacademy.ru</span>
         </p>
 
-        <p>
+        <p class="footer-text">
           Разработано — <br />
-          <span>htmlacademy.ru</span>
+          <span class="footer-span">htmlacademy.ru</span>
         </p>
       </section>
     </footer>
