--- a/inside.html
+++ b/inside.html
@@ -3,52 +3,62 @@
   <head>
     <meta charset="utf-8" />
     <title>HTML Academy: Техномарт</title>
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Cuprum:ital,wght@0,400;0,700;1,400&family=PT+Sans:wght@400;700&display=swap"
+    />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Cuprum:ital,wght@0,400;0,700;1,400&display=swap"
+    />
+    <link rel="stylesheet" href="css/normalize.css" />
+    <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <header>
-      <section>
-        <a href="index.html"> Техномарт </a>
+    <header class="header">
+      <section class="header-orders">
+        <a href="index.html" class="header-logo">Техномарт </a>
         <form action="#" method="POST">
           <input type="search" placeholder="Поиск:" />
         </form>
-        <ul>
-          <li>Закладки: 0</li>
-          <li>Корзина: 10</li>
+        <ul class="header-products">
+          <li class="header-products_marker">Закладки: 0</li>
+          <li class="header-products_basket">Корзина: 0</li>
         </ul>
 
-        <a href="blank.html">Оформить заказ</a>
+        <a class="button-checkout" href="blank.html">Оформить заказ</a>
       </section>
 
-      <section>
-        <i
+      <section class="header-info">
+        <i class="header-info-title"
           >Интернет-магазин строительных материалов и инструментов для
           ремонта</i
         >
-        <p>+7 (812) 555-05-55</p>
-        <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
+        <p class="header-info-phone">+7 (812) 555-05-55</p>
+        <p class="header-info-address">
+          г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8
+        </p>
 
-        <p>Равшан Джамшутович</p>
-        <ul>
-          <li><a href="#">Мои заказы</a></li>
-          <li><a href="#">Личный кабинет</a></li>
-        </ul>
+        <a class="button-sign-in" href="blank.html">Войти</a>
+        <a class="button-registration" href="blank.html">Регистрация</a>
       </section>
 
-      <section>
-        <nav>
+      <section class="header-nav">
+        <nav class="header-nav-list">
           <ul>
-            <li><a href="blank.html">Главная</a></li>
-            <li><a href="blank.html">Компания</a></li>
-            <li><a href="blank.html">Каталог</a></li>
-            <li><a href="blank.html">Новости</a></li>
-            <li><a href="blank.html">Спецпредложения</a></li>
-            <li><a href="blank.html">Доставка</a></li>
-            <li><a href="blank.html">Контакты</a></li>
+            <li class="header-nav-item"><a href="blank.html">Главная</a></li>
+            <li class="header-nav-item"><a href="blank.html">Компания</a></li>
+            <li class="header-nav-item"><a href="blank.html">Каталог</a></li>
+            <li class="header-nav-item"><a href="blank.html">Новости</a></li>
+            <li class="header-nav-item">
+              <a href="blank.html">Спецпредложения</a>
+            </li>
+            <li class="header-nav-item"><a href="blank.html">Доставка</a></li>
+            <li class="header-nav-item"><a href="blank.html">Контакты</a></li>
           </ul>
         </nav>
       </section>
     </header>
-
     <main>
       <ul>
         <li><a href="index.html">лого</a></li>
@@ -204,50 +214,60 @@
       </section>
     </main>
 
-    <footer>
-      <section>
-        <a href="index.html">ТЕХНОМАРТ</a>
-        <ul>
-          <li><a href="blank.html">Компания</a></li>
-          <li><a href="blank.html">Новости</a></li>
-          <li><a href="blank.html">Каталог</a></li>
-          <li><a href="blank.html">Доставка</a></li>
-          <li><a href="blank.html">Каталог</a></li>
+    <footer class="footer">
+      <section class="footer-nav">
+        <a class="footer-logo" href="index.html">ТЕХНОМАРТ</a>
+        <ul class="footer-nav-items">
+          <li class="footer-nav-item"><a href="blank.html">Компания</a></li>
+          <li class="footer-nav-item"><a href="blank.html">Новости</a></li>
+          <li class="footer-nav-item"><a href="blank.html">Каталог</a></li>
+          <li class="footer-nav-item"><a href="blank.html">Доставка</a></li>
+          <li class="footer-nav-item"><a href="blank.html">Каталог</a></li>
         </ul>
       </section>
 
-      <section>
-        <p>
+      <section class="footer-products">
+        <p class="footer-address">
           г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8<br />
           +7 (812) 555-05-55
         </p>
-        <ul>
-          <li><a href="blank.html">Материалы</a></li>
-          <li><a href="blank.html">Техника</a></li>
-          <li><a href="blank.html">Инструмент</a></li>
-          <li><a href="blank.html">Спецпредложения</a></li>
+        <ul class="footer-products-items">
+          <li class="footer-products-item">
+            <a href="blank.html">Материалы</a>
+          </li>
+          <li class="footer-products-item"><a href="blank.html">Техника</a></li>
+          <li class="footer-products-item">
+            <a href="blank.html">Инструмент</a>
+          </li>
+          <li class="footer-products-item">
+            <a href="blank.html">Спецпредложения</a>
+          </li>
         </ul>
       </section>
 
-      <section>
-        <p>
+      <section class="footer-contacts">
+        <p class="footer-law">
           © 2010–2019 Компания «Техномарт»<br />
           Все права защищены
         </p>
-        <ul>
-          <li><a href="https://vk.com">вк</a></li>
-          <li><a href="https://facebook.com">фейсбук</a></li>
-          <li><a href="https://instagram.com">инстаграм</a></li>
+        <ul class="footer-accounts">
+          <li class="footer-account"><a href="https://vk.com">вк</a></li>
+          <li class="footer-account">
+            <a href="https://facebook.com">фейсбук</a>
+          </li>
+          <li class="footer-account">
+            <a href="https://instagram.com">инстаграм</a>
+          </li>
         </ul>
 
-        <p>
+        <p class="footer-text">
           Обратная связь:<br />
-          <span>mail@htmlacademy.ru</span>
+          <span class="footer-span">mail@htmlacademy.ru</span>
         </p>
 
-        <p>
+        <p class="footer-text">
           Разработано — <br />
-          <span>htmlacademy.ru</span>
+          <span class="footer-span">htmlacademy.ru</span>
         </p>
       </section>
     </footer>
