--- a/inside.html
+++ b/inside.html
@@ -92,7 +92,7 @@
       <ul class="products-list">
         <li class="products-item">
           <a class="products-item-link" href="product.html">
-            <img src="https://via.placeholder.com/144x128" alt="Перфоратор BOSCH BFG 6000" />
+            <img src="./img/product1.jpg" alt="Перфоратор BOSCH BFG 6000" width="144" height="128" />
             <h3 class="products-item-title">Перфоратор BOSCH<br />BFG 6000</h3>
             <p class="products-item-price">30500 Р.</p>
           </a>
@@ -101,7 +101,7 @@
 
         <li class="products-item">
           <a class="products-item-link" href="product.html">
-            <img src="https://via.placeholder.com/144x128" alt="Перфоратор BOSCH BFG 6000" />
+            <img src="./img/product2.jpg" alt="Перфоратор BOSCH BFG 6000" width="144" height="128" />
             <h3 class="products-item-title">Перфоратор BOSCH<br />BFG 6000</h3>
             <p class="products-item-price">30500 Р.</p>
           </a>
@@ -120,7 +120,7 @@
 
         <li class="products-item">
           <a class="products-item-link" href="product.html">
-            <img src="https://via.placeholder.com/144x128" alt="Перфоратор BOSCH BFG 6000" />
+            <img src="./img/product2.jpg" alt="Перфоратор BOSCH BFG 6000" width="144" height="128" />
             <h3 class="products-item-title">Перфоратор BOSCH<br />BFG 6000</h3>
             <p class="products-item-price">30500 Р.</p>
           </a>
@@ -129,7 +129,7 @@
 
         <li class="products-item">
           <a class="products-item-link" href="product.html">
-            <img src="https://via.placeholder.com/144x128" alt="Перфоратор BOSCH BFG 6000" />
+            <img src="./img/product2.jpg" alt="Перфоратор BOSCH BFG 6000" width="144" height="128" />
             <h3 class="products-item-title">Перфоратор BOSCH<br />BFG 6000</h3>
             <p class="products-item-price">30500 Р.</p>
           </a>
@@ -138,7 +138,7 @@
 
         <li class="products-item">
           <a class="products-item-link" href="product.html">
-            <img src="https://via.placeholder.com/144x128" alt="Перфоратор BOSCH BFG 6000" />
+            <img src="./img/product2.jpg" alt="Перфоратор BOSCH BFG 6000" width="144" height="128" />
             <h3 class="products-item-title">Перфоратор BOSCH<br />BFG 6000</h3>
             <p class="products-item-price">30500 Р.</p>
           </a>
@@ -147,7 +147,7 @@
 
         <li class="products-item">
           <a class="products-item-link" href="product.html">
-            <img src="https://via.placeholder.com/144x128" alt="Перфоратор BOSCH BFG 6000" />
+            <img src="./img/product2.jpg" alt="Перфоратор BOSCH BFG 6000" width="144" height="128" />
             <h3 class="products-item-title">Перфоратор BOSCH<br />BFG 6000</h3>
             <p class="products-item-price">30500 Р.</p>
           </a>
@@ -156,7 +156,7 @@
 
         <li class="products-item">
           <a class="products-item-link" href="product.html">
-            <img src="https://via.placeholder.com/144x128" alt="Перфоратор BOSCH BFG 6000" />
+            <img src="./img/product2.jpg" alt="Перфоратор BOSCH BFG 6000" width="144" height="128" />
             <h3 class="products-item-title">Перфоратор BOSCH<br />BFG 6000</h3>
             <p class="products-item-price">30500 Р.</p>
           </a>
@@ -165,7 +165,7 @@
 
         <li class="products-item">
           <a class="products-item-link" href="product.html">
-            <img src="https://via.placeholder.com/144x128" alt="Перфоратор BOSCH BFG 6000" />
+            <img src="./img/product2.jpg" alt="Перфоратор BOSCH BFG 6000" width="144" height="128" />
             <h3 class="products-item-title">Перфоратор BOSCH<br />BFG 6000</h3>
             <p class="products-item-price">30500 Р.</p>
           </a>
